--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   </head>
   
   <body>
-    <h2>hi</h2>
-    <h1>i'm monika pani</h1>
+    <div class="container d-flex align-items-center justify-content-left">
+      <div>
+        <h2>hi</h2>
+        <h1>i'm monika pani</h1>
+      </div>
+    </div>
   </body>
 </html>
