--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   </head>
   
   <body>
-    <div class="container d-flex align-items-center justify-content-left">
-      <div>
-        <h2>hi</h2>
-        <h1>i'm monika pani</h1>
+    <div class="container"> 
+      <div class="d-flex align-items-center justify-content-left">
+        <div>
+          <h2>hi</h2>
+          <h1>i'm monika pani</h1>
+        </div>
       </div>
     </div>
   </body>
