--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   
   <body>
-    <div class="container"> 
+    <div class="container" style="min-height: 100vh"> 
       <div class="d-flex align-items-center justify-content-left">
         <div>
           <h2>hi</h2>
