--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   
   <body>
-    <div class="container" style="min-height: 100vh"> 
-      <div class="d-flex align-items-center justify-content-left">
+    <div class="container"> 
+      <div class="d-flex align-items-center justify-content-left" style="min-height: 100vh">
         <div>
           <h2>hi</h2>
           <h1>i'm monika pani</h1>
