--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="container"> 
       <div class="d-flex align-items-center justify-content-left" style="min-height: 100vh">
         <div>
-          <h2>hi</h2>
-          <h1>i'm monika pani</h1>
+          <div class="display-3">hi</div>
+          <div class="display-1"><strong>i'm monika pani</strong></div>
         </div>
       </div>
     </div>
