--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="container"> 
       <div class="d-flex align-items-center justify-content-left" style="min-height: 100vh">
         <div>
-          <div class="display-3">hi</div>
-          <div class="display-1"><strong>i'm monika pani</strong></div>
+          <h2 class="display-3">hi</h2>
+          <h1 class="display-1"><strong>i'm monika pani</strong></h1>
         </div>
       </div>
     </div>
